kubernetes/overlays/dev/replicas.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: shared-web-v1

spec:
    replicas: 1
